--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ baseurl: ''
 timezone: Europe/Paris
 
 google_analytics:
-  id: ''          # Fill with your Google Analytics ID
+  id: 'G-7JY58BKWDR'          # Fill with your Google Analytics ID
   pv:
     # The Google Analytics pageviews switch.
     # DO NOT enable it unless you know how to deploy the Google Analytics superProxy.
